--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "jsdom": "^24.0.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
@@ -26,6 +27,7 @@
     "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.7",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
